# tg_bot_SMM_coach

./: bot.py  config.py  file_check.py  phone_numbers.txt  pyproject.toml
smm_bot/: __main__.py  config.py  database.db-journal  db.py  db.sql  templates.py
smm_bot/handlers/: __init__.py  help.py  other.py  start.py  video2.py
smm_bot/services/: add_user.py
smm_bot/templates/: help.j2  other.j2  start.j2  support.j2  video2.j2
